# openbank-transactions-to-hibiscus

./: LICENSE  Pipfile  README.md  hanseatic.py  kantine.py  main.py  pyproject.toml
hanseatic/: __init__.py
hibiscus/: __init__.py
kantine/: __init__.py
loaders/: __init__.py  amex.py  hanseatic.py  menuebestellung.py  n26.py  openbank.py  parqet.py
openbank/: __init__.py
