[tool.poetry]
name = "openbank-transactions-to-hibiscus"
version = "0.1.0"
description = ""
authors = ["Konstantin Köhring <konsti@galaxy102.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
lxml = "^5.3.0"
pandas = "^2.2.2"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
