[tool.poetry]
name = "openbank-transactions-to-hibiscus"
version = "0.1.0"
description = ""
authors = ["Konstantin Köhring <konsti@galaxy102.de>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.3.2"
beautifulsoup4 = "^4.13.3"
xlrd = "^2.0.2"

[tool.poetry.group.dev]
optional = true
[tool.poetry.group.dev.dependencies]
pandas-stubs = "^2.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
